Image stretch fix

--- a/styles/global.css
+++ b/styles/global.css
@@ -43,4 +43,5 @@ figure {
 
 img {
     max-width: 100%;
+    height: auto;
 }
